fix: prevent horizontal scroll

--- a/src/app/shared/book-card/book-card.scss
+++ b/src/app/shared/book-card/book-card.scss
@@ -65,6 +65,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 100%;
+    max-width: 160px;
   }
 
   mat-card-content {
